// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea[snapshot] Snapshot test: Textarea[site/pages/components/Textarea/example-1-base.tsx] 1`] = `
<label>
  <textarea />
</label>
`;

exports[`Textarea[snapshot] Snapshot test: Textarea[site/pages/components/Textarea/example-2-autosize.tsx] 1`] = `
<div>
  <label>
    <textarea />
    <textarea />
  </label>
  <br />
  <label>
    <textarea />
    <textarea />
  </label>
</div>
`;

exports[`Textarea[snapshot] Snapshot test: Textarea[site/pages/components/Textarea/example-3-info.tsx] 1`] = `
<label>
  <textarea />
</label>
`;

exports[`Textarea[snapshot] Snapshot test: Textarea[site/pages/components/Textarea/example-4-custom.tsx] 1`] = `
<label>
  <textarea />
</label>
`;

exports[`Textarea[snapshot] Snapshot test: Textarea[site/pages/components/Textarea/example-5-renderFooter.tsx] 1`] = `
<label>
  <textarea />
  <div>
    <span>
      Tip : Hello SHEIN !
    </span>
  </div>
</label>
`;
